<resources>
    <string name="app_name">Forapp</string>

    <string name="menu_my_cupboard">Explore food</string>
    <string name="menu_make_a_dish">Make a dish</string>
    <string name="menu_explore_dishes">Explore dishes</string>
    <string name="menu_about">About</string>

    <string name="name_prefix">Item:</string>
    <string name="pieces_prefix">Quantity:</string>
    <string name="recipes_available">Available recipes:</string>
    <string name="item_type">Item type:</string>
    <string name="add_item">Add</string>
    <string name="remove_all">Delete item</string>
    <string name="remove_one">Remove</string>
    <string name="adding_new_item">Add new item</string>
    <string name="hint_item_name">Item name</string>
    <string name="hint_item_quantity">Item quantity</string>
    <string name="button_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dishes">Explore Dishes</string>
    <string name="new_dish">Add new dish</string>
    <string name="hint_recipe_title">Recipe title</string>
    <string name="ingredients">Ingredients:</string>
    <string name="button_add_ingredient">Add Ingredient</string>
    <string name="hint_recipe_description">Recipe description</string>
    <string name="from_catalog">From catalog</string>
    <string name="new_item">New ingrediente</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="ingredient">Select ingredient:</string>
    <string name="next">next</string>

    <string name="about_info">My Food Manager es un proyecto de Ingeniería de desarrollo Software que fue realizada por cuatro estudiantes, My Food Manager es una aplicación que nos permite tener un control de nuestros alimentos y nos sugerirá que platillos se pueden realzar con dichos alimentos.</string>
    <string name="nohaydishes">Sorry, there is no possible dishes with that ingredients.</string>
    <string name="possible_dishes">Possible dishes</string>
    <string name="detail_recipe">Recipe</string>
    <string name="directions_preparations">Directions:</string>

</resources>
