<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_cardviews"
    android:padding="16dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/il_recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/et_recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_recipe_title" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textSize="17dp"/>
            <LinearLayout
                android:id="@+id/ingredients_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/add_ingredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/button_add_ingredient"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/il_recipe_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/et_recipe_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_recipe_description" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/dish_image"
                android:layout_width="160dp"
                android:layout_height="130dp"
                android:src="@drawable/placeholder"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/button_save_dish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                android:layout_gravity="right"/>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>