<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_ingredient"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="19dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/radio_catalog"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:layout_gravity="center">
        <RadioButton
            android:id="@+id/radio_catalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_catalog"
            android:layout_margin="3dp"
            android:buttonTint="@color/colorPrimary" />
        <RadioButton
            android:id="@+id/radio_new_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_item"
            android:layout_margin="3dp"
            android:buttonTint="@color/colorPrimary"/>
    </RadioGroup>
    <LinearLayout
        android:id="@+id/from_catalog_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient"
            android:textSize="17dp"
            android:layout_margin="5dp"/>
        <Spinner
            android:id="@+id/spinner_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/new_ingredient_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/et_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_item_name" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_type"
            android:textSize="17dp"/>
        <Spinner
            android:id="@+id/item_type_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right">
    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="CANCEL"
        android:layout_margin="5dp"/>
    <Button
        android:id="@+id/dialog_add"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="ADD"
        android:layout_margin="5dp"/>
</LinearLayout>

</LinearLayout>