<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_cardviews">

    <android.support.v7.widget.Toolbar
        android:id="@+id/maintoolbar"
        android:layout_width="match_parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimary"/>

    <ImageView
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:src="@drawable/logo"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="6"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.90"
                android:gravity="center">

                <android.support.v7.widget.CardView
                    android:id="@+id/cardview_cupboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardCornerRadius="2dp"
                    android:background="?attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:layout_gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_launcher"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_my_cupboard"
                            android:minLines="2"
                            android:gravity="center"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.4"/>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.90"
                android:gravity="center">
                <android.support.v7.widget.CardView
                    android:id="@+id/cardview_exploredishes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardCornerRadius="2dp"
                    android:background="?attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_launcher"
                            android:id="@+id/imageView" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_explore_dishes"
                            android:minLines="2"

                            android:gravity="center"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="6"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.90"
                android:gravity="center">
                <android.support.v7.widget.CardView
                    android:id="@+id/cardview_makedish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardCornerRadius="2dp"
                    android:background="?attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="10dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_launcher"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_make_a_dish"
                            android:id="@+id/textView"
                            android:minLines="2"
                            android:gravity="center"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.4"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.90"
                android:gravity="center">
                <android.support.v7.widget.CardView
                    android:id="@+id/cardview_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="2dp"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardCornerRadius="2dp"
                    android:background="?attr/selectableItemBackground"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="10dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_launcher"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu_about"
                            android:minLines="2"
                            android:id="@+id/textView2"
                            android:gravity="center"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>


</LinearLayout>