<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="@color/background_cardviews">
    <android.support.v7.widget.CardView
        android:id="@+id/cardview_cupboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--<ImageView-->
                    <!--android:id="@+id/item_image"-->
                    <!--android:layout_width="70dp"-->
                    <!--android:layout_height="70dp"-->
                    <!--android:src="@mipmap/ic_launcher"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:layout_centerVertical="true"/>-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_prefix"
                            android:maxLines="1"/>
                        <TextView
                            android:id="@+id/item_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Lechuga"
                            android:layout_gravity="right"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".1"
                        android:gravity="center">
                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/gray_divider"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipes_available"
                            android:maxLines="1"/>
                        <TextView
                            android:id="@+id/number_recipes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="12"
                            android:maxLines="1"
                            android:layout_gravity="right"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_type"
                            android:maxLines="1"/>
                        <TextView
                            android:id="@+id/item_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Verdura"
                            android:maxLines="1"
                            android:layout_gravity="right"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="6dp">-->
                <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1px"-->
                    <!--android:background="@color/gray_divider"/>-->
            <!--</LinearLayout>-->
            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:gravity="right">-->
                <!--<Button-->
                    <!--android:layout_width="90dp"-->
                    <!--android:layout_height="33dp"-->
                    <!--android:text="@string/remove_all"-->
                    <!--android:background="?attr/selectableItemBackground"-->
                    <!--android:foreground="?android:attr/selectableItemBackground"-->
                    <!--android:clickable="true"-->
                    <!--android:textColor="@color/black_remove_all"/>-->
                <!--<Button-->
                    <!--android:layout_width="85dp"-->
                    <!--android:layout_height="33dp"-->
                    <!--android:text="@string/remove_one"-->
                    <!--android:background="?attr/selectableItemBackground"-->
                    <!--android:foreground="?android:attr/selectableItemBackground"-->
                    <!--android:clickable="true"-->
                    <!--android:textColor="@color/red_remove"/>-->
                <!--<Button-->
                    <!--android:layout_width="50dp"-->
                    <!--android:layout_height="33dp"-->
                    <!--android:text="@string/add_item"-->
                    <!--android:background="?attr/selectableItemBackground"-->
                    <!--android:foreground="?android:attr/selectableItemBackground"-->
                    <!--android:clickable="true"-->
                    <!--android:textColor="@color/green_add"/>-->
            <!--</LinearLayout>-->
        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>